infrastructure/polyfea/polyfea-controller.http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: polyfea-controller
    namespace: wac-hospital
spec:
    parentRefs:
        - name: wac-hospital-gateway
          namespace: wac-hospital
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /fea
          backendRefs:
              - group: ""
                kind: Service
                name: polyfea-controller
                namespace: polyfea
                port: 80
        - matches:
              - path:
                    type: Exact
                    value: /
          filters:
              - type: RequestRedirect
                requestRedirect:
                    path:
                        type: ReplaceFullPath
                        replaceFullPath: /fea/
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
    name: allow-wac-hospital-to-polyfea-controller
    namespace: polyfea
spec:
    from:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          namespace: wac-hospital
    to:
        - group: ""
          kind: Service
          name: polyfea-controller
